# dbt-bigqueryy

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
scripts/: load-env.ps1
