[project]
name = "dbt-bigqueryy"
version = "0.1.0"
description = ""
authors = [
    {name = "Jownao",email = "johnnywsevero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.10.15,<2.0.0)",
    "dbt-bigquery (>=1.10.3,<2.0.0)",
    "sqlfluff-templater-dbt (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.4.0,<5.0.0)",
    "sqlfluff (>=4.0.0)"
]
